Add email to contact button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="#about" class="hover:text-white transition-colors">About</a>
         </div>
         <a
-          href="#signin"
+          href="mailto:vic@voiceedgeai.com"
           class="inline-block text-sm border border-gray-700 rounded-md px-4 py-2 hover:bg-white/5 transition-all"
           >Contact&nbsp;Us</a
         >
