--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
             <div class="flex flex-col sm:flex-row gap-4">
               <a
-                href="#"
+                href="https://calendly.com/vic-g2insight/free-ai-assessment"
                 class="inline-block bg-white text-black font-light rounded-md px-6 py-3 hover:bg-opacity-90 transition-all"
                 >Book&nbsp;Free&nbsp;Assessment</a
               >
